Fix: Login page items were not centered

--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,11 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 1020px;
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
